Fix spacing and list style type

--- a/src/components/style.scss
+++ b/src/components/style.scss
@@ -20,6 +20,10 @@
 	margin-bottom: 0.75rem;
 }
 
+.content ul {
+	list-style-type: none;
+}
+
 @media screen and (min-width: 769px) {
 	.text-5xl {
 		font-size: 4rem !important;
